Bug 131067 - selected frame in writer auto-deselects due to navigator a second later
Summary: selected frame in writer auto-deselects due to navigator a second later
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Navigator regressions-buffering-GraphicData
  Show dependency treegraph
 
Reported: 2020-03-02 10:33 UTC by Caolán McNamara
Modified: 2020-03-08 07:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
demo document (36.42 KB, application/vnd.oasis.opendocument.text)
2020-03-02 10:33 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2020-03-02 10:33:36 UTC
Description:
selected frame doesn't stay selected when navigator panel open

Steps to Reproduce:
1. take the attached document, open the navigator in the sidebar (with all nodes expanded)
2. click in the document itself on the frame
3. gets selected
4. a second later it deselects

Actual Results:
doesn't stay selected

Expected Results:
stays selected


Reproducible: Always


User Profile Reset: No



Additional Info:
master only, 6-4 is ok
Comment 1 Caolán McNamara 2020-03-02 10:33:59 UTC
Created attachment 158308 [details]
demo document
Comment 2 Jim Raykowski 2020-03-02 15:52:27 UTC
Thanks for letting me know. I thought this might be an issue. It also happens for other content types. Perhaps only do outline tracking if current selection in Navigator is an outline type? This will prevent tracking to an outline if say a table or bookmark is navigated into from the navigator. I have put a patch in to set this tracking feature off until turned on by the user. Outline tracking in all content navigation view mode is WIP.
Comment 3 Jim Raykowski 2020-03-03 21:31:21 UTC
Here is a patch for review that remedies this by not doing outline tracking when other than Headings entries are navigated to from the Navigator.

https://gerrit.libreoffice.org/c/core/+/89928
Comment 4 Commit Notification 2020-03-08 02:29:53 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4bca67d21e418eb3981cd63390bf2cb401dabe13

tdf#131067 Only outline track if an outline entry is selected

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.