tdf#131067 Only outline track if an outline entry is selected

This patch ignores outline tracking when other than Headings/outline
content is navigated to from the Navigator.

Change-Id: I3ecbe508b5d641e8f9bd8fe2e70d8ae23f0bf879